# copper

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  workspace.code-workspace
copper-cli/: .gitignore  Cargo.toml
copper-cli/src/: cli.rs  download_deps.rs  launch_minecraft.rs  main.rs
minecraft-cli/: .gitignore  Cargo.toml  imgui.ini
minecraft-cli/src/: cli.rs  download_deps.rs  launch_minecraft.rs  main.rs
src/: cli.rs  errors.rs  launcher.rs  lib.rs  main.rs  parser.rs  util.rs
src/assets/structs/: asset_index.rs  launcher_meta.rs  mod.rs  version.rs  version_manifest.rs  versionmanifest.rs
src/downloading/structs/: launchermeta.rs  mod.rs  versionmanifest.rs
tests-dir/: .gitkeep
