[package]
name = "copper"
version = "0.1.0"
edition = "2021"
authors = ["suyashtnt <suyashtnt@gmail.com>"]
description = "Minecraft launcher: rust edition"
documentation = "https://docs.rs/minecraft-rs"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/glowsquid-launcher/minecraft-rs#readme"
repository = "https://github.com/glowsquid-launcher/minecraft-rs"
keywords = ["minecraft", "launcher", "game"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "sync",
  "process",
] }
reqwest = { version = "0.11", features = ["json"] }
tokio-retry = "0.3"
futures = "0.3.18"
log = "0.4.14"
dunce = "1.0.2"
# why do you have to do this mojang
[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.9", features = ["kernel"] }
