[package]
name = "copper"
version = "0.1.0"
edition = "2021"
authors = ["suyashtnt <suyashtnt@gmail.com>"]
description = "Minecraft launcher: rust edition"
documentation = "https://docs.rs/minecraft-rs"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/glowsquid-launcher/minecraft-rs#readme"
repository = "https://github.com/glowsquid-launcher/minecraft-rs"
keywords = ["minecraft", "launcher", "game"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "fs",
  "process",
] }
reqwest = { version = "0.11", features = ["json"] }
tokio-retry = "0.3"
futures = "0.3"
log = "0.4"
dunce = "1"
thiserror = "1"
itertools = "0.10"

# why do you have to do this mojang
[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.10", features = ["kernel"] }
