[package]
name = "copper-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copper = { version = "*", path = "../" }
clap = { version = "3", features = ["derive"] }
anyhow = "1.0.52"
indicatif = "0.16.2"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.19"
tracing = "0.1"
tracing-subscriber = "0.2"
chrono = "0.4.19"
java-locator = "0.1.2"
