[package]
name = "copper-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copper = { version = "*", path = "../" }
clap = { version = "3", features = ["derive"] }
anyhow = "1"
indicatif = "0.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
java-locator = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
