[package]
name = "minecraft-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecraft-rs = { version = "*", path = "../" }
structopt = "0.3.25"
anyhow = "1.0.52"
indicatif = "0.16.2"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.19"
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"
java-locator = "0.1.2"
